# fastapi-gcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: lint_and_test.yml  test-auth.yml
services/: container.yml
src/: main.py
terraform/: .gitignore  artifact-registry.tf  main.tf  outputs.tf  variables.tf  workload-identity.tf
tests/: test_main.py
