[tool.poetry]
name = "test"
version = "0.1.0"
description = "A FastAPI project"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
httpx = "^0.24.0"
requests = "^2.31.0"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
flake8 = "4.0.1"
pytest = "7.1.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.build-system.poetry"
